[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kkbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.3.0",
    "openai>=1.30.0",
    "loguru>=0.7.0",
]

[project.scripts]
kkbot = "kkbot.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["kkbot*"]
